--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Install deps
         run: npm ci || npm install
 
+      - name: Lint
+        run: npm run lint --ignore-pattern node_modules
+
       - name: Build CSS
         run: npm run build
-
-      - name: Lint placeholder
-        run: echo "No linter configured yet"
 
